Istio/setup/k8sDashboard/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard-vs
  namespace: kube-system
spec:
  hosts:
    # - "adventureworks.westeurope.cloudapp.azure.com"
    - "kubernetes.docker.internal"
  gateways:
  - public-gateway
  http:
  - match:
    - uri:
        prefix: "/dash"
    route:
    - destination:
        host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
        port:
          number: 443
